--- a/BattleCity.html
+++ b/BattleCity.html
@@ -160,5 +160,253 @@
       </table>
     </div>
   </div>
+  <!-- =========================
+     MOBILE TOUCH CONTROLS
+     Paste before </body>
+========================= -->
+
+<style>
+  /* показываем только на тач-устройствах */
+  @media (pointer: fine) {
+    .bcTouchWrap { display: none !important; }
+  }
+
+  .bcTouchWrap{
+    position: fixed;
+    left: calc(12px + env(safe-area-inset-left));
+    right: calc(12px + env(safe-area-inset-right));
+    bottom: calc(12px + env(safe-area-inset-bottom));
+    display: flex;
+    justify-content: space-between;
+    gap: 12px;
+    z-index: 999999;
+    pointer-events: none; /* включим клики только внутри панелей */
+  }
+
+  .bcTouchPad, .bcTouchActions{
+    pointer-events: auto;
+    background: rgba(0,0,0,.35);
+    border: 1px solid rgba(255,255,255,.18);
+    backdrop-filter: blur(10px);
+    border-radius: 18px;
+    padding: 10px;
+    box-shadow: 0 12px 40px rgba(0,0,0,.35);
+    user-select: none;
+    -webkit-user-select: none;
+    touch-action: none;
+  }
+
+  .bcTouchPad{
+    display: grid;
+    grid-template-columns: repeat(3, 52px);
+    grid-template-rows: repeat(3, 52px);
+    gap: 8px;
+    align-items: center;
+    justify-items: center;
+  }
+
+  .bcTouchActions{
+    display: grid;
+    grid-template-columns: 92px;
+    grid-auto-rows: 52px;
+    gap: 8px;
+    align-content: start;
+  }
+
+  .bcBtn{
+    width: 52px;
+    height: 52px;
+    border-radius: 16px;
+    border: 1px solid rgba(255,255,255,.18);
+    background: rgba(255,255,255,.08);
+    color: rgba(255,255,255,.95);
+    font-weight: 900;
+    font-size: 16px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    -webkit-tap-highlight-color: transparent;
+    touch-action: none;
+  }
+
+  .bcBtn:active{ transform: translateY(1px); }
+
+  .bcAction{
+    height: 52px;
+    border-radius: 16px;
+    border: 1px solid rgba(255,255,255,.18);
+    background: linear-gradient(135deg, rgba(102,217,255,.22), rgba(255,92,122,.18));
+    color: rgba(255,255,255,.96);
+    font-weight: 900;
+    font-size: 13px;
+    -webkit-tap-highlight-color: transparent;
+    touch-action: manipulation;
+  }
+
+  .bcAction.secondary{
+    background: rgba(255,255,255,.08);
+    font-weight: 850;
+  }
+
+  .bcSpacer{
+    width: 52px;
+    height: 52px;
+  }
+
+  /* чуть уменьшим на очень маленьких экранах */
+  @media (max-width: 360px){
+    .bcTouchPad{ grid-template-columns: repeat(3, 46px); grid-template-rows: repeat(3, 46px); }
+    .bcBtn{ width: 46px; height: 46px; border-radius: 14px; }
+    .bcTouchActions{ grid-template-columns: 84px; grid-auto-rows: 46px; }
+    .bcAction{ height: 46px; border-radius: 14px; font-size: 12px; }
+    .bcSpacer{ width: 46px; height: 46px; }
+  }
+</style>
+
+<div class="bcTouchWrap" id="bcTouchWrap" aria-hidden="true">
+  <!-- D-Pad -->
+  <div class="bcTouchPad">
+    <div class="bcSpacer"></div>
+    <button class="bcBtn" data-key="ArrowUp" data-keycode="38" aria-label="Вверх">▲</button>
+    <div class="bcSpacer"></div>
+
+    <button class="bcBtn" data-key="ArrowLeft" data-keycode="37" aria-label="Влево">◀</button>
+    <div class="bcSpacer"></div>
+    <button class="bcBtn" data-key="ArrowRight" data-keycode="39" aria-label="Вправо">▶</button>
+
+    <div class="bcSpacer"></div>
+    <button class="bcBtn" data-key="ArrowDown" data-keycode="40" aria-label="Вниз">▼</button>
+    <div class="bcSpacer"></div>
+  </div>
+
+  <!-- Actions -->
+  <div class="bcTouchActions">
+    <button class="bcAction" id="bcFire" data-key=" " data-keycode="32">ОГОНЬ</button>
+    <button class="bcAction secondary" id="bcStart" data-key="Enter" data-keycode="13">START</button>
+    <button class="bcAction secondary" id="bcCtrl" data-key="Control" data-keycode="17">CTRL</button>
+  </div>
+</div>
+
+<script>
+(function () {
+  // На всякий случай отключаем “резиновый” скролл на тачах
+  try {
+    document.documentElement.style.overscrollBehavior = 'none';
+    document.body.style.overscrollBehavior = 'none';
+  } catch(e){}
+
+  // Пытаемся сфокусировать страницу игры (важно для обработчиков keydown)
+  function ensureFocus(){
+    try { window.focus(); } catch(e){}
+    // Если у игры есть canvas — попробуем дать ему фокус
+    var c = document.
+      querySelector('canvas');
+    if (c) {
+      if (!c.hasAttribute('tabindex')) c.setAttribute('tabindex', '0');
+      try { c.focus(); } catch(e){}
+    }
+  }
+
+  function makeKeyboardEvent(type, key, keyCode){
+    var ev;
+    try {
+      ev = new KeyboardEvent(type, {
+        key: key,
+        code: key,
+        bubbles: true,
+        cancelable: true
+      });
+      // keyCode/which часто read-only — подменим через defineProperty
+      Object.defineProperty(ev, 'keyCode', { get: function(){ return keyCode; } });
+      Object.defineProperty(ev, 'which',   { get: function(){ return keyCode; } });
+    } catch (e) {
+      ev = document.createEvent('Event');
+      ev.initEvent(type, true, true);
+      ev.keyCode = keyCode;
+      ev.which = keyCode;
+    }
+    return ev;
+  }
+
+  function keyDown(key, keyCode){
+    ensureFocus();
+    var ev = makeKeyboardEvent('keydown', key, keyCode);
+    document.dispatchEvent(ev);
+    window.dispatchEvent(ev);
+  }
+
+  function keyUp(key, keyCode){
+    ensureFocus();
+    var ev = makeKeyboardEvent('keyup', key, keyCode);
+    document.dispatchEvent(ev);
+    window.dispatchEvent(ev);
+  }
+
+  // Для стрелок — удержание (нажат/отпустил)
+  function bindHold(btn){
+    var key = btn.getAttribute('data-key');
+    var keyCode = parseInt(btn.getAttribute('data-keycode'), 10);
+
+    var pressed = false;
+
+    function down(e){
+      e.preventDefault();
+      if (pressed) return;
+      pressed = true;
+      keyDown(key, keyCode);
+    }
+    function up(e){
+      e.preventDefault();
+      if (!pressed) return;
+      pressed = false;
+      keyUp(key, keyCode);
+    }
+
+    // Pointer Events (лучше всего)
+    btn.addEventListener('pointerdown', down, { passive: false });
+    btn.addEventListener('pointerup', up, { passive: false });
+    btn.addEventListener('pointercancel', up, { passive: false });
+    btn.addEventListener('pointerleave', up, { passive: false });
+
+    // Fallback на старые браузеры
+    btn.addEventListener('touchstart', down, { passive: false });
+    btn.addEventListener('touchend', up, { passive: false });
+    btn.addEventListener('touchcancel', up, { passive: false });
+
+    btn.addEventListener('mousedown', down);
+    btn.addEventListener('mouseup', up);
+    btn.addEventListener('mouseleave', up);
+  }
+
+  // Для кнопок “Огонь/Start/Ctrl” — короткий тап
+  function bindTap(btn){
+    var key = btn.getAttribute('data-key');
+    var keyCode = parseInt(btn.getAttribute('data-keycode'), 10);
+
+    function tap(e){
+      e.preventDefault();
+      keyDown(key, keyCode);
+      setTimeout(function(){ keyUp(key, keyCode); }, 60);
+    }
+
+    btn.addEventListener('click', tap);
+    btn.addEventListener('touchstart', tap, { passive: false });
+    btn.addEventListener('pointerdown', tap, { passive: false });
+  }
+
+  // Привязки
+  document.querySelectorAll('.bcTouchPad .bcBtn[data-keycode]').forEach(bindHold);
+  bindTap(document.getElementById('bcFire'));
+  bindTap(document.getElementById('bcStart'));
+  bindTap(document.getElementById('bcCtrl'));
+
+  // На всякий случай, при первом тапе по экрану — фокус
+  document.addEventListener('touchstart', ensureFocus, { passive: true });
+})();
+</script>
+
+<!-- =========================
+     /MOBILE TOUCH CONTROLS
+========================= -->
 </body>
 </html>
